--- a/src/app/feature/validator/item-list/item-list.component.scss
+++ b/src/app/feature/validator/item-list/item-list.component.scss
@@ -1,4 +1,5 @@
-mat-list-item:hover {
-    cursor: pointer;
-    background-color: grey;
+.summary {
+    border-bottom: 1px solid #e0e0e0;
+    margin-bottom: 12px;
+    font-weight: bold;
 }
