--- a/src/app/feature/validator/validator/validator.component.html
+++ b/src/app/feature/validator/validator/validator.component.html
@@ -1,6 +1,24 @@
-<button mat-button obButton="tertiary" type="button" routerLink="../..">
+<button mat-button obButton="tertiary" type="button" routerLink="/">
     <mat-icon svgIcon="arrow-left" /> {{'navigation.back' | translate}}
 </button>
-@if(report() !== undefined) {
-<cube-validation-report [report]="report()!" />
-}
+<div>
+    <cube-cube-description [cube]="cubeDefinition()" (profileSelected)="updateValidationProfile($event)"
+        [selectedProfileIri]="currentProfile()?.value" [@fadeInOut] />
+
+    <ob-spinner [channel]="'cube'" />
+</div>
+<mat-tab-group [selectedIndex]="currentTabIndex()" (selectedIndexChange)="changeTab($event)" preserveContent>
+    <mat-tab label="Cube">
+        @if(!isCubeValidationRunning() && cubeValidationReport()) {
+        <cube-validation [report]="cubeValidationReport()!" />
+
+        } @else {
+        <h1>Running</h1>
+        }
+    </mat-tab>
+    <mat-tab label="Observation">
+
+        <cube-observation-validation [endpoint]="endpoint()" [cubeIri]="cubeIri()" />
+
+    </mat-tab>
+</mat-tab-group>
