--- a/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
+++ b/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
@@ -99,12 +99,14 @@
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
     <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let result" [attr.colspan]="dimensionColumnsToDisplayWithExpand.length">
+            @if(result.objectValue) {
             <div [@detailExpand]="result == expandedElement ? 'expanded' : 'collapsed'">
                 <div>
                     <h4>Dimension Configuration</h4>
                 </div>
+
                 <table>
-                    @for(triple of result.objectValue.toTable();; track triple) {
+                    @for(triple of result.objectValue?.toTable();; track triple) {
 
                     <tr class="triple-row">
                         <td>{{triple.predicate}}</td>
@@ -116,6 +118,7 @@
 
 
             </div>
+            }
         </td>
     </ng-container>
 
