fix language in cube view

--- a/src/app/core/component/cube-description/cube-description.component.html
+++ b/src/app/core/component/cube-description/cube-description.component.html
@@ -3,7 +3,7 @@
     @if(cube()) {
     <div class="content" [@fadeInOut]>
         <div class="label">
-            {{cube()!.name}}
+            {{cubeName()}}
         </div>
         <div class="lang">
             &lt;{{cube()!.iri}}&gt;
