--- a/src/app/feature/validator/playground-link/playground-link.component.html
+++ b/src/app/feature/validator/playground-link/playground-link.component.html
@@ -1,3 +1,3 @@
 @if(playgroundLink() !== undefined) {
-<p>see it in <a target="_blank" [href]="playgroundLink()">SHACL playground</a> </p>
+<p><a target="_blank" [href]="playgroundLink()">SHACL playground</a> </p>
 }
