--- a/src/app/core/component/cube-description/cube-description.component.html
+++ b/src/app/core/component/cube-description/cube-description.component.html
@@ -9,8 +9,9 @@
             &lt;{{cube()!.iri}}&gt;
         </div>
         <div class="profile">
-            <cube-profile-selector (profileSelected)="emitProfileSelected($event)"
-                [selectedProfileIri]="selectedProfileIri()" [profiles]="cube()!.getAvailableValidationProfiles()" />
+            <cube-profile-selector (profileSelected)="emitProfileSelected($event)" [selectedProfile]="selectedProfile()"
+                [profiles]="cube()!.getAvailableValidationProfiles()" />
+
         </div>
     </div>
 
