--- a/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
+++ b/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
@@ -75,7 +75,8 @@
 
     <ng-container matColumnDef="Message">
         <th mat-header-cell *matHeaderCellDef> Message </th>
-        <td mat-cell *matCellDef="let result"> {{result.resultMessage}} </td>
+        <td mat-cell *matCellDef="let result"> {{result.path === 'http://www.w3.org/ns/shacl#property' ||
+            result.path.length < 1 ? '' : '&lt;' + result.path + '&gt;' }} {{result.resultMessage}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Severity">
@@ -99,8 +100,9 @@
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
     <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let result" [attr.colspan]="dimensionColumnsToDisplayWithExpand.length">
-            @if(result.objectValue) {
             <div [@detailExpand]="result == expandedElement ? 'expanded' : 'collapsed'">
+                @if(result.objectValue) {
+
                 <div>
                     <h4>Dimension Configuration</h4>
                 </div>
@@ -115,10 +117,12 @@
                     }
                 </table>
 
-
+                } @else {
+                <div>no value node</div>
+                }
 
             </div>
-            }
+
         </td>
     </ng-container>
 
