--- a/src/app/feature/validator/validation-report/validation-report.component.html
+++ b/src/app/feature/validator/validation-report/validation-report.component.html
@@ -7,24 +7,22 @@
         <thead>
                 <tr>
                         <th>Focus Node</th>
-                        <th>Severity</th>
                         <th>Path</th>
                         <th>Message</th>
                         <th>Value</th>
+                        <th>Severity</th>
                 </tr>
         </thead>
         <tbody>
                 @for(result of report().results; track result) {
 
                 <tr>
-                        <th>
+                        <td>
                                 <a target="_blank"
                                         [href]="result.focusNode?.value ?? ''">&lt;{{result.focusNode?.value}}&gt;</a>
-                        </th>
-                        <th>
-                                <cube-severity [severity]="result.severity?.value" />
-                        </th>
-                        <td><a [href]="result.path?.value ?? ''" target="_blank">&lt;{{result.path?.value}}&gt;</a>
+                        </td>
+                        <td>
+                                {{result.path?.value}}
                         </td>
                         <td>
 
@@ -35,9 +33,13 @@
                         <td>
                                 {{result.value?.value ?? ''}}
                         </td>
+                        <td>
+                                <cube-severity [severity]="result.severity?.value" />
+                        </td>
                 </tr>
                 }
 
         </tbody>
+
 </table>
 }
