add link and cli command

--- a/src/app/core/component/cub-validation-barnard59-cli-command/cub-validation-barnard59-cli-command.component.html
+++ b/src/app/core/component/cub-validation-barnard59-cli-command/cub-validation-barnard59-cli-command.component.html
@@ -1,7 +1,7 @@
 @if(command()) {
 <button mat-button obButton="tertiary" type="button" (click)="copyToClipboard()"
-    matTooltip="Copy barnard59 command to clipboard" matTooltipPosition="right">
-    Barnard59 CLI
+    matTooltip="Copy barnard59 cube validation command to clipboard" matTooltipPosition="right">
+    Barnard59 Cube Validation CLI Command
     <mat-icon svgIcon="clipboard" />
 </button>
 
