--- a/src/app/feature/validator/observation-validation/observation-validation.component.html
+++ b/src/app/feature/validator/observation-validation/observation-validation.component.html
@@ -18,6 +18,11 @@
     </div>
     @if(!conforms() ) {
     <cube-validation-report [report]="report()!" [@fadeInOut] />
+    <br>
+    <br>
+    <br>
+    <cube-playground-link [playgroundLink]="playgroundLink()" />
+
     }
     }
     <ob-spinner channel="observation-validator" [@fadeInOut] />
