--- a/src/app/feature/validator/validator/validator.component.html
+++ b/src/app/feature/validator/validator/validator.component.html
@@ -13,7 +13,7 @@
     <mat-tab label="Cube">
         @if(!isCubeValidationRunning() && cubeValidationReport()) {
         <cube-validation [report]="cubeValidationReport()!" />
-        <cube-barnard59-cli-command [cubeIri]="cubeIri()" [endpoint]="endpoint()"
+        <cube-validation-barnard59-cli-command [cubeIri]="cubeIri()" [endpoint]="endpoint()"
             [validationProfileUrl]="currentProfile()?.value!" />
         } @else if (errorSignal() && !isCubeValidationRunning()) {
         <span>{{errorSignal()}}</span>
@@ -27,6 +27,6 @@
     <mat-tab label="Observation">
 
         <cube-observation-validation [endpoint]="endpoint()" [cubeIri]="cubeIri()" />
-
+        <cube-observation-validation-barnard59-cli-command [cubeIri]="cubeIri()" [endpoint]="endpoint()" />
     </mat-tab>
 </mat-tab-group>
