--- a/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
+++ b/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
@@ -28,7 +28,7 @@
 </mat-accordion>
 
 
-<table mat-table [dataSource]="cubeValidationResult()" class="ob-table-sm">
+<table mat-table [dataSource]="cubeValidationResult()" class="ob-table ob-table-sm">
 
     <ng-container matColumnDef="Path">
         <th mat-header-cell *matHeaderCellDef> Path </th>
@@ -66,17 +66,17 @@
 <br>
 
 <h6>Dimension validation report</h6>
-<table mat-table [dataSource]="dimensionValidationResult()" multiTemplateDataRows class="ob-table-sm">
+<table mat-table [dataSource]="dimensionValidationResult()" multiTemplateDataRows class="ob-table ob-table-sm">
 
-    <ng-container matColumnDef="Dimension">
-        <th mat-header-cell *matHeaderCellDef> Dimension </th>
-        <td mat-cell *matCellDef="let result"> {{result.dimensionValue?.path ?? 'none'}} </td>
-    </ng-container>
 
     <ng-container matColumnDef="Message">
         <th mat-header-cell *matHeaderCellDef> Message </th>
         <td mat-cell *matCellDef="let result"> {{result.path === 'http://www.w3.org/ns/shacl#property' ||
             result.path.length < 1 ? '' : '&lt;' + result.path + '&gt;' }} {{result.resultMessage}} </td>
+    </ng-container>
+    <ng-container matColumnDef="Dimension">
+        <th mat-header-cell *matHeaderCellDef> Dimension </th>
+        <td mat-cell *matCellDef="let result"> {{result.dimensionValue?.path ?? 'none'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Severity">
@@ -99,7 +99,8 @@
 
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
     <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let result" [attr.colspan]="dimensionColumnsToDisplayWithExpand.length">
+        <td style="padding:0; border-bottom: none;" mat-cell *matCellDef="let result"
+            [attr.colspan]="dimensionColumnsToDisplayWithExpand.length">
             <div [@detailExpand]="result == expandedElement ? 'expanded' : 'collapsed'">
                 @if(result.objectValue) {
 
@@ -128,8 +129,8 @@
 
     <tr mat-header-row *matHeaderRowDef="dimensionColumnsToDisplayWithExpand"></tr>
 
-    <tr mat-row *matRowDef="let result; columns: dimensionColumnsToDisplayWithExpand;" class="example-element-row"
-        [class.example-expanded-row]="expandedElement === result"
+    <tr style="border-bottom: none;" mat-row *matRowDef="let result; columns: dimensionColumnsToDisplayWithExpand;"
+        class="example-element-row" [class.example-expanded-row]="expandedElement === result"
         (click)="expandedElement = expandedElement === result ? null : result">
     </tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
