--- a/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.scss
+++ b/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.scss
@@ -61,3 +61,8 @@ tr.triple-row td:first-child {
 .triple-row:hover {
     background: lightgray;
 }
+
+td,
+th {
+    font-size: 14px !important;
+}
