--- a/src/app/feature/validator/validation-report/validation-report.component.scss
+++ b/src/app/feature/validator/validation-report/validation-report.component.scss
@@ -17,3 +17,13 @@
     justify-content: center;
     align-items: center;
 }
+
+
+td,
+th {
+    font-size: 14px !important;
+}
+
+th {
+    height: 56px !important;
+}
