--- a/src/app/feature/cube-selection/validator-input/validator-input.component.scss
+++ b/src/app/feature/cube-selection/validator-input/validator-input.component.scss
@@ -5,3 +5,22 @@
 .red {
     color: red;
 }
+
+// Fix mat-form-field height to properly display text
+:host ::ng-deep {
+    .mat-mdc-form-field {
+        .mat-mdc-text-field-wrapper {
+            min-height: 56px;
+        }
+
+        .mat-mdc-form-field-infix {
+            min-height: 48px;
+            padding-top: 12px;
+            padding-bottom: 12px;
+        }
+
+        input.mat-mdc-input-element {
+            line-height: 24px;
+        }
+    }
+}
