--- a/src/app/core/component/profile-selector/profile-selector.component.scss
+++ b/src/app/core/component/profile-selector/profile-selector.component.scss
@@ -7,3 +7,30 @@
 form {
     width: 100%;
 }
+
+// Fix mat-form-field height to properly display text in dropdown and input
+:host ::ng-deep {
+    .mat-mdc-form-field {
+        .mat-mdc-text-field-wrapper {
+            min-height: 56px;
+        }
+
+        .mat-mdc-form-field-infix {
+            min-height: 48px;
+            padding-top: 12px;
+            padding-bottom: 12px;
+        }
+
+        input.mat-mdc-input-element {
+            line-height: 24px;
+        }
+
+        .mat-mdc-select {
+            line-height: 24px;
+        }
+
+        .mat-mdc-select-value {
+            line-height: 24px;
+        }
+    }
+}
