Fix console warnings and improve browser compatibility
- Fix NG0956 track by identity warning in @for loops
- Remove deprecated allowSignalWrites flag from effect() calls
- Replace string-to-stream with browser-compatible implementation
- Add type declaration for stream-browserify
- Update polyfills with util shim

--- a/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
+++ b/src/app/feature/validator/cube-constraints-validation-report/cube-constraints-validation-report.component.html
@@ -16,7 +16,7 @@
             <h4>Cube Configuration</h4>
         </div>
         <table>
-            @for(triple of cubeValidationResult()[0].focusNode!.toTable();; track triple) {
+            @for(triple of cubeValidationResult()[0].focusNode!.toTable(); track triple.predicate + triple.object) {
 
             <tr class="triple-row">
                 <td>{{triple.predicate}}</td>
@@ -109,7 +109,7 @@
                 </div>
 
                 <table>
-                    @for(triple of result.objectValue?.toTable();; track triple) {
+                    @for(triple of result.objectValue?.toTable(); track triple.predicate + triple.object) {
 
                     <tr class="triple-row">
                         <td>{{triple.predicate}}</td>
